--- a/pom.xml
+++ b/pom.xml
@@ -137,39 +137,40 @@
     <properties>
         <jdk.version>11</jdk.version>
         <mvn.version>3.2.5</mvn.version>
+        <project.build.outputTimestamp>2023-04-09T08:38:05Z</project.build.outputTimestamp>
 
         <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
-        <jakarta.json.version>2.1.1</jakarta.json.version>
-        <parsson.version>1.1.1</parsson.version>
-        <jaxb-api.version>4.0.0</jaxb-api.version>
+        <jakarta.json.version>2.1.2</jakarta.json.version>
+        <parsson.version>1.1.4</parsson.version>
+        <jaxb-api.version>4.0.1</jaxb-api.version>
         <jaxb-runtime.version>4.0.2</jaxb-runtime.version>
         <java.net.username>${user.name}</java.net.username>
         <jakarta.enterprise.cdi-api.version>3.0.0</jakarta.enterprise.cdi-api.version>
-        <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
+        <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
         <jakarta.validation.version>3.0.2</jakarta.validation.version>
         <glassfish.jakarta.el.version>4.0.2</glassfish.jakarta.el.version>
         <jakarta.el.version>5.0.1</jakarta.el.version>
         <jtype.version>0.1.3</jtype.version>
         <javassist.version>3.29.2-GA</javassist.version>
         <junit.version>4.13.2</junit.version>
-        <asm.version>9.5</asm.version>
+        <asm.version>9.6</asm.version>
         <woodstox.version>4.1.2</woodstox.version>
         <stax-api.version>1.0-2</stax-api.version>
         <aopalliance.version>1.0</aopalliance.version>
-        <testng.version>7.7.1</testng.version>
+        <testng.version>7.8.0</testng.version>
         <assertj.version>3.24.2</assertj.version>
-        <pax-exam-version>4.13.1</pax-exam-version>
+        <pax-exam-version>4.13.5</pax-exam-version>
         <jakarta-inject.version>2.0.1</jakarta-inject.version>
-        <org.jboss.logging.version>3.5.0.Final</org.jboss.logging.version>
+        <org.jboss.logging.version>3.5.3.Final</org.jboss.logging.version>
         <jersey.version>3.1.1</jersey.version>
         <grizzly.version>4.0.0</grizzly.version>
         <hamcrest.version>1.3</hamcrest.version>
         <jakarta.servlet.version>6.0.0</jakarta.servlet.version>
         <jakarta.ws.rs.version>3.1.0</jakarta.ws.rs.version>
         <classmate.version>1.5.1</classmate.version>
-        <springcontext.version>6.0.7</springcontext.version>
+        <springcontext.version>6.0.12</springcontext.version>
         <guice.version>5.1.0</guice.version>
-        <protobuf.version>3.22.2</protobuf.version>
+        <protobuf.version>3.24.3</protobuf.version>
 
         <legal.doc.source>${maven.multiModuleProjectDirectory}/</legal.doc.source>
 
@@ -330,7 +331,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.5.0</version>
+                    <version>3.6.0</version>
                     <configuration>
                         <doclint>none</doclint>
                     </configuration>
@@ -338,7 +339,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>3.2.1</version>
+                    <version>3.4.1</version>
                 </plugin>
                 <plugin>
                     <groupId>com.googlecode.maven-download-plugin</groupId>
@@ -353,7 +354,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.1.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -373,22 +374,25 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>5.1.8</version>
+                    <version>5.1.9</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-plugin-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <version>3.9.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>3.3.0</version>
+                    <version>3.4.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.glassfish.hk2</groupId>
                     <artifactId>hk2-inhabitant-generator</artifactId>
                     <version>${project.version}</version>
+                    <configuration>
+                        <includeDate>false</includeDate>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -398,7 +402,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.5.0</version>
+                    <version>3.6.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.glassfish.hk2</groupId>
@@ -421,7 +425,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <version>3.4.1</version>
+                    <version>3.5.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -434,7 +438,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>3.2.1</version>
+                    <version>3.3.0</version>
                     <configuration>
                       <includePom>true</includePom>
                     </configuration>
@@ -451,7 +455,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.0.1</version>
                     <configuration>
                         <mavenExecutorId>forked-path</mavenExecutorId>
                         <useReleaseProfile>false</useReleaseProfile>
@@ -464,7 +468,7 @@
                         <dependency>
                             <groupId>org.apache.maven.scm</groupId>
                             <artifactId>maven-scm-provider-gitexe</artifactId>
-                            <version>1.13.0</version>
+                            <version>2.0.1</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -494,12 +498,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-scm-publish-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.2.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.servicemix.tooling</groupId>
                     <artifactId>depends-maven-plugin</artifactId>
-                    <version>1.4.0</version>
+                    <version>1.5.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-install-plugin</artifactId>
@@ -549,13 +553,13 @@
             <dependency>
                 <groupId>org.apache.maven</groupId>
                 <artifactId>maven-plugin-api</artifactId>
-                <version>3.9.1</version>
+                <version>3.9.4</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.maven</groupId>
                 <artifactId>maven-core</artifactId>
-                <version>3.9.1</version>
+                <version>3.9.4</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -598,17 +602,17 @@
             <dependency>
                 <groupId>org.apache.ant</groupId>
                 <artifactId>ant</artifactId>
-                <version>1.10.13</version>
+                <version>1.10.14</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.maven</groupId>
                 <artifactId>maven-artifact</artifactId>
-                <version>3.9.1</version>
+                <version>3.9.4</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.maven</groupId>
                 <artifactId>maven-archiver</artifactId>
-                <version>3.6.0</version>
+                <version>3.6.1</version>
             </dependency>
             <dependency>
                 <groupId>org.testng</groupId>
@@ -695,17 +699,17 @@
             <dependency>
                 <groupId>org.ops4j.pax.url</groupId>
                 <artifactId>pax-url-aether</artifactId>
-                <version>2.6.1</version>
+                <version>2.6.14</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
-                <version>1.4.6</version>
+                <version>1.4.11</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>1.4.6</version>
+                <version>1.4.11</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.felix</groupId>
@@ -795,7 +799,7 @@
             <dependency>
                 <groupId>org.easymock</groupId>
                 <artifactId>easymock</artifactId>
-                <version>5.1.0</version>
+                <version>5.2.0</version>
             </dependency>
             <dependency>
                 <groupId>jakarta.validation</groupId>
@@ -820,7 +824,7 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.12.0</version>
+                <version>3.13.0</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.jersey.containers</groupId>
@@ -905,14 +909,14 @@
                             <dependency>
                                 <groupId>org.jacoco</groupId>
                                 <artifactId>jacoco-maven-plugin</artifactId>
-                                <version>0.8.8</version>
+                                <version>0.8.10</version>
                             </dependency>
                         </dependencies>
                     </plugin>
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.8</version>
+                        <version>0.8.10</version>
                         <executions>
                             <!-- Prepares the property pointing to the JaCoCo runtime agent which
                                  is passed as VM argument when Maven the Surefire plugin is executed. -->
