--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
     <groupId>org.glassfish.hk2</groupId>
     <artifactId>hk2-parent</artifactId>
-    <version>3.0.5-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>GlassFish HK2</name>
@@ -144,17 +144,22 @@
         <mvn.version>3.2.5</mvn.version>
         <project.build.outputTimestamp>2023-10-04T08:38:05Z</project.build.outputTimestamp>
 
-        <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
+        <jakarta.annotation.version>3.0.0-M1</jakarta.annotation.version>
+        <jakarta.enterprise.cdi-api.version>4.1.0-M1</jakarta.enterprise.cdi-api.version>
+        <jakarta.servlet.version>6.1.0-M1</jakarta.servlet.version>
         <jakarta.json.version>2.1.3</jakarta.json.version>
+        <jakarta.validation.version>3.0.2</jakarta.validation.version>
+        <jakarta.ws.rs.version>3.1.0</jakarta.ws.rs.version>
+        <jakarta.el.version>5.0.1</jakarta.el.version>
+        
         <parsson.version>1.1.5</parsson.version>
         <jaxb-api.version>4.0.1</jaxb-api.version>
         <jaxb-runtime.version>4.0.3</jaxb-runtime.version>
         <java.net.username>${user.name}</java.net.username>
-        <jakarta.enterprise.cdi-api.version>4.0.1</jakarta.enterprise.cdi-api.version>
         <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
-        <jakarta.validation.version>3.0.2</jakarta.validation.version>
+        
         <glassfish.jakarta.el.version>4.0.2</glassfish.jakarta.el.version>
-        <jakarta.el.version>5.0.1</jakarta.el.version>
+        
         <jtype.version>0.1.3</jtype.version>
         <javassist.version>3.29.2-GA</javassist.version>
         <junit.version>4.13.2</junit.version>
@@ -170,8 +175,7 @@
         <jersey.version>3.1.3</jersey.version>
         <grizzly.version>4.0.0</grizzly.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <jakarta.servlet.version>6.0.0</jakarta.servlet.version>
-        <jakarta.ws.rs.version>3.1.0</jakarta.ws.rs.version>
+        
         <classmate.version>1.6.0</classmate.version>
         <springcontext.version>6.0.13</springcontext.version>
         <guice.version>7.0.0</guice.version>
