--- a/pom.xml
+++ b/pom.xml
@@ -322,8 +322,8 @@
             </dependency>
             <dependency>
                 <groupId>org.osgi</groupId>
-                <artifactId>org.osgi.enterprise</artifactId>
-                <version>5.0.0</version>
+                <artifactId>osgi.enterprise</artifactId>
+                <version>7.0.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.felix</groupId>
