--- a/osgi/adapter-tests/pom.xml
+++ b/osgi/adapter-tests/pom.xml
@@ -35,7 +35,8 @@
         <module>faux-sdp-bundle</module>
         <module>sdp-management-bundle</module>
         <module>test-module-startup</module>
-        <!-- <module>osgi-adapter-test</module> -->
+<!-- Fails with incomprehensible error messages, also the PAX Exam project seems dead. -->
+<!--        <module>osgi-adapter-test</module> -->
         <module>no-hk2-bundle</module>
     </modules>
 </project>
