--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,7 @@
         <mvn.version>3.2.5</mvn.version>
         <project.build.outputTimestamp>2023-10-04T08:38:05Z</project.build.outputTimestamp>
 
+        <jakarta.activation.version>2.1.3</jakarta.activation.version>
         <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
         <jakarta.json.version>2.1.3</jakarta.json.version>
         <parsson.version>1.1.6</parsson.version>
@@ -189,6 +190,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>jakarta.activation</groupId>
+                <artifactId>jakarta.activation-api</artifactId>
+                <version>${jakarta.activation.version}</version>
+            </dependency>
             <dependency>
                 <groupId>jakarta.annotation</groupId>
                 <artifactId>jakarta.annotation-api</artifactId>
