Reenabled osgi-adapter-test module
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>

--- a/osgi/adapter-tests/pom.xml
+++ b/osgi/adapter-tests/pom.xml
@@ -36,7 +36,7 @@
         <module>sdp-management-bundle</module>
         <module>test-module-startup</module>
 <!-- Fails with incomprehensible error messages, also the PAX Exam project seems dead. -->
-<!--        <module>osgi-adapter-test</module> -->
+        <module>osgi-adapter-test</module>
         <module>no-hk2-bundle</module>
     </modules>
 </project>
