--- a/pom.xml
+++ b/pom.xml
@@ -395,18 +395,8 @@
             <dependency>
                 <groupId>org.ops4j.pax.logging</groupId>
                 <artifactId>pax-logging-api</artifactId>
-                <version>2.2.7</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>avalon-framework</groupId>
-                        <artifactId>avalon-framework-api</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.ops4j.pax.logging</groupId>
-                <artifactId>pax-logging-service</artifactId>
-                <version>2.2.7</version>
+                <!-- Newer versions are broken, please try osgi-adapter-test before upgrade! -->
+                <version>1.11.17</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
